--- a/index.html
+++ b/index.html
@@ -3,18 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>nexus-dev-space</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Portfolio Pedro</title>
+    <meta name="description" content="Pedro Paulo Personal Portfolio" />
 
-    <meta property="og:title" content="nexus-dev-space" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Portfolio Pedro" />
+    <meta property="og:description" content="Pedro Paulo Personal Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/code.png" />
   </head>
 
   <body>
